fix: hide blue taps on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@media (pointer: coarse) {
+  a,
+  button {
+    -webkit-tap-highlight-color: transparent;
+  }
+}
+
 /* 
 
  :root {
